# fogfs

./: .gitignore  DESIGN  Makefile  README.md  meson.build
include/: cache.hh  common.hh  crypto.hh  dir.hh  errors.hh  item.hh  path.hh  settings.hh  store.hh
src/: cache.cc  crypto.cc  dir.cc  errors.cc  item.cc  main.cc  path.cc  settings.cc
